traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: not found: value b
  if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))){
                                                           ^Snake:3: error: not found: value a
  if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))){
                                                                                                      ^