traversal.snake.Snake.scala.code
def posFinal():Boolean ={

	if (estFaceMur() && ((getDirection() == Direction.EST && b) || (getDirection() == Direction.WEST && a))){
    return true
  }
  else {
    return false
  }
  }

 

 

override def run() {
  baisseBrosse()
	do {
  	droite()
  	var a = estFaceMur()
  	retourne()
  	var b = estFaceMur()
  	droite()
    avance()
    if (estFaceMur() && a) {
      gauche()
      avance()
      gauche()
    }
    else if (estFaceMur() && b) {
      droite()
      avance()
      droite()
    }
  } while (!posFinal())
    

  
}